--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <p>محمد قوی، دانشجوی مهندسی عمران دانشگاه تربیت دبیر شهید رجایی.</p>
 <p>مشغول به مطالعه و پژوهش در زمینه فناوری ارتباطات و اطلاعات ICT هستم.</p>
 <p>کارشناسی مهندس عمران</p>
-<pدانشگاه تربیت دبیر شهید رجایی تهران</p>
-<div><span>تا کنون</span><span>1402</span></div>
-<div><h4>مهندس معلم عمران</h4><p>معلم رسمی آموزش و پرورش</p></div>
+<p></p>دانشگاه تربیت دبیر شهید رجایی تهران</p>
+<p>مهندس معلم عمران معلم رسمی آموزش و پرورش</p>
 		
-			
 			
 			
 
