--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>محمد قوی</h1>
 <p>محمد قوی، دانشجوی مهندسی عمران دانشگاه تربیت دبیر شهید رجایی.</p>
-<p>مشغول به مطالعه و پژوهش در زمینه فناوری ارتباطات و اطلاعات ICT هستم.</p>
+<p>ICT.مشغول به مطالعه و پژوهش در زمینه فناوری ارتباطات و اطلاعات هستم</p>
 <p>کارشناسی مهندس عمران</p>
 <p></p>دانشگاه تربیت دبیر شهید رجایی تهران</p>
 <p>مهندس معلم عمران معلم رسمی آموزش و پرورش</p>
